--- a/HW8_FisherFrye/assets/css/main.css
+++ b/HW8_FisherFrye/assets/css/main.css
@@ -3065,3 +3065,18 @@
 		}
 
 	}
+
+
+
+/*******************************************************
+*** Custom Vis Styles - by Alex Frye and Alexandra Fisher
+********************************************************/
+
+#timelineVis {
+	background: #ffffff;
+	padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
