--- a/HW10_FisherFrye/assets/css/main.css
+++ b/HW10_FisherFrye/assets/css/main.css
@@ -3072,6 +3072,9 @@
 *** Custom Vis Styles - by Alex Frye and Alexandra Fisher
 ********************************************************/
 
+/*******************************************************
+*** Timeline Block Tree
+********************************************************/
 #timelineVis {
 	background: #ffffff;
 	padding-left: 0;
@@ -3099,3 +3102,43 @@
 	stroke: #6280BF;
 	stroke-width: 1.5px;
   }
+
+/*******************************************************
+*** Progress Bar Skills
+********************************************************/
+/* The div in which we append all the bars */
+  .progress-bars {
+	 padding: 25px 0 0 25px;
+	 float: left;
+  }
+  
+/* The actual bar with the progress */
+  .bar {
+	 display: block;
+	 overflow: hidden;
+	 height: 18px;
+	 width: 0px;
+	 border: 1px solid rgba(0, 0, 0, 0.5);
+	 border-radius: 10px;
+	 margin-bottom: 5px;
+	 margin-left: 10px;
+	 box-shadow: 1px 1px 1px #888888;
+  }
+  
+/* The pattern */
+  .pattern {
+	 height: 100%;
+	 width: 100%;
+	 background-image: url(../../images/pattern.png);
+	 background-color: #FB7457;
+  }
+  
+/* Div to display the percentage */
+  .percentage {
+	 margin-left: 0px;
+	 text-align: center;
+	 font-family: "Verdana", sans-serif;
+	 font-size: 0.8em;
+	 line-height: 18px;
+  }
+
